# spin-multi-route

./: Cargo.toml  README.md  spin.toml
handlers/hello/: Cargo.toml
handlers/hello/src/: lib.rs
handlers/root/: Cargo.toml
handlers/thing/: Cargo.toml
handlers/thing/src/: lib.rs
handlers/things/: Cargo.toml
handlers/things/src/: lib.rs
hello/: Cargo.toml
hello/src/: lib.rs
response/: Cargo.toml
response/src/: lib.rs
responses/: Cargo.toml
root/: Cargo.toml
root/src/: lib.rs
stuff/: Cargo.toml
stuff/src/: lib.rs
thing/: Cargo.toml
thing/src/: lib.rs
things/: Cargo.toml
things/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
