[package]
name = "root"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1"
http = "0.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v0.6.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

utils = { path = "../utils" }
